Tons more stylistic and minor structural changes. Still incomplete.

--- a/stylesheets/less/colorbox.less
+++ b/stylesheets/less/colorbox.less
@@ -31,7 +31,7 @@
 			position:absolute; 
 			bottom:5px; 
 			left:5px; 
-			background:url(../../images/fs_sprite.png) -200px -150px no-repeat; 
+			background:url(../images/sprite.png) -200px -150px no-repeat; 
 			width:20px; 
 			height:20px; 
 			text-indent:-9999px; 
@@ -43,7 +43,7 @@
 			position:absolute; 
 			bottom:5px; 
 			left:30px; 
-			background:url(../../images/fs_sprite.png) -180px -150px no-repeat; 
+			background:url(../images/sprite.png) -180px -150px no-repeat; 
 			width:20px; 
 			height:20px; 
 			text-indent:-9999px;
@@ -54,7 +54,7 @@
 			position:absolute; 
 			bottom:5px; 
 			right:5px; 
-			background:url(../../images/fs_sprite.png) -215px -145px no-repeat; 
+			background:url(../images/sprite.png) -215px -145px no-repeat; 
 			width:20px; 
 			height:20px; 
 			text-indent:-9999px;
