--- a/stylesheets/less/sprites.less
+++ b/stylesheets/less/sprites.less
@@ -4,78 +4,6 @@
 	.sprite {
 		display:block;
 	}
-	.sprite.vimeo-dark-30 {
-		width:30px;
-		height:26px;
-		.sprite-background(0px, -90px);
-	}
-	.sprite.twitter-dark-30 {
-		width:23px;
-		height:30px;
-		.sprite-background(-60px, -90px);
-	}
-	.sprite.tumblr-dark-30 {
-		width:19px;
-		height:30px;
-		.sprite-background(-110px, -90px);
-	}
-	.sprite.facebook-dark-30 {
-		width:14px;
-		height:30px;
-		.sprite-background(-150px, -90px);
-	}
-	.sprite.flickr-dark-30 {
-		width:30px;
-		height:15px;
-		.sprite-background(-190px, -90px);
-	}
-	.sprite.git-dark-30 {
-		width:28px;
-		height:30px;
-		.sprite-background(-240px, -90px);
-	}
-	.sprite.friendfeed-dark-30 {
-		width:28px;
-		height:30px;
-		.sprite-background(-340px, -90px);
-	}
-
-	.sprite.vimeo-light-30 {
-		width:30px;
-		height:26px;
-		.sprite-background(0px, -40px);
-	}
-	.sprite.twitter-light-30 {
-		width:23px;
-		height:30px;
-		.sprite-background(-60px, -40px);
-	}
-	.sprite.tumblr-light-30 {
-		width:19px;
-		height:30px;
-		.sprite-background(-110px, -40px);
-	}
-	.sprite.facebook-light-30 {
-		width:14px;
-		height:30px;
-		.sprite-background(-150px, -40px);
-	}
-	.sprite.flickr-light-30 {
-		width:30px;
-		height:15px;
-		.sprite-background(-190px, -40px);
-	}
-	.sprite.git-light-30 {
-		width:28px;
-		height:30px;
-		.sprite-background(-240px, -40px);
-	}
-	.sprite.rss-light-30 {
-		width:30px;
-		height:30px;
-		.sprite-background(-290px, -40px);
-	}
-	
 	.sprite.vimeo-dark-15 {
 		width:18px;
 		height:15px;
@@ -146,5 +74,15 @@
 		width:15px;
 		height:15px;
 		.sprite-background(-290px, -140px);
+	}
+	.sprite.arrow-right-15 {
+		width:9px;
+		height:15px;
+		.sprite-background(-110px, 0px);
+	}
+	.sprite.arrow-left-15 {
+		width:9px;
+		height:15px;
+		.sprite-background(-160px, 0px);
 	}
 }
