--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -49,3 +49,15 @@ nav li.rss, nav li.twitter {
 	-o-transition-duration: .5s;
 	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 }
+
+button, .button, input[type=submit] {
+	-webkit-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0);
+}
+
+#content.single .previous .arrow, #content.single .previous a {
+		-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+		-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+		-o-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0);
+}
