--- a/stylesheets/css/forms.css
+++ b/stylesheets/css/forms.css
@@ -10,4 +10,4 @@
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-@media screen, projection{label{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:13px;line-height:19px;font-weight:bold;} input[type=text],textarea{font-size:13px;line-height:19px;border:1px solid #5d504f;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#5d504f;} input[type=submit]{display:inline-block;background:#3d302f;color:#f0eceb;-moz-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);-webkit-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);padding:4px 10px;border-radius:5px;font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;text-align:center;border:0;text-shadow:0px 1px 1px rgba(18, 7, 6, 0.3);}}
+@media screen, projection{label{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:13px;line-height:19px;font-weight:bold;} input[type=text],textarea{font-size:13px;line-height:19px;border:1px solid #5d504f;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#5d504f;}}
