--- a/stylesheets/css/grid.css
+++ b/stylesheets/css/grid.css
@@ -11,7 +11,7 @@
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
 .wrapper{width:980px;position:relative;margin:0 auto !important;display:block;}
-.wrapper.showgrid{background-image:url(../images/grid_14col.png);}
+.wrapper.showgrid{background-image:url(../../images/grid_14col.png);}
 div.span-1,div.span-2,div.span-3,div.span-4,div.span-5,div.span-6,div.span-7,div.span-8,div.span-9,div.span-10,div.span-11,div.span-12{float:left;margin-right:40px;}
 div.last{margin-right:0;}
 section.span-1,section.span-2,section.span-3,section.span-4,section.span-5,section.span-6,section.span-7,section.span-8,section.span-9,section.span-10,section.span-11,section.span-12{float:left;margin-right:40px;}
