--- a/stylesheets/less/grid.less
+++ b/stylesheets/less/grid.less
@@ -6,7 +6,7 @@
 	display: block;
 }
 
-.wrapper.showgrid { background-image: url(../images/grid_14col.png); }
+.wrapper.showgrid { background-image: url(../../images/grid_14col.png); }
 
 div.span-1,div.span-2,div.span-3,div.span-4,div.span-5,div.span-6,div.span-7,div.span-8,div.span-9,div.span-10,div.span-11,div.span-12{
 	float: left;
