--- a/style.css
+++ b/style.css
@@ -440,8 +440,6 @@ line-height:27px;
 #content.home article section img,#content.single article section img,#content.page article section img,#content.archive article section
 img {
 max-width:555px;
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 }
 
@@ -728,8 +726,6 @@ padding:0;
 
 #content.home .content.oneup .post img,#content.home .content.oneup.large .post img,#content.home .content.twoup .post img,#content.home .content.fourup .post img,#content.home .content.halfandhalf .post
 img {
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 }
 
@@ -800,8 +796,6 @@ margin:15px 0;
 #content.single .post-info .previous
 .arrow {
 display:block;
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 width:45px;
 height:45px;
@@ -1345,8 +1339,6 @@ margin-left:0;
 }
 
 #text-10 {
--moz-box-shadow:0 4px 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 4px 8px rgba(18,7,6,0.3);
 box-shadow:0 4px 8px rgba(18,7,6,0.3);
 margin-top:-30px;
 }
@@ -1644,8 +1636,6 @@ line-height:19px;
 #content.home article section img.noshadow,#content.single article section img.noshadow,#content.page article section img.noshadow,#content.archive article section
 img.noshadow,#content.page article section
 img {
--moz-box-shadow:none!important;
--webkit-box-shadow:none!important;
 box-shadow:none!important;
 }
 
@@ -1738,8 +1728,6 @@ line-height:12px;
 }
 
 .default-shadow {
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 }
 
@@ -1912,28 +1900,25 @@ width:110px;
 
 button,.button,input[type=submit] {
 display:inline-block;
-background:#5d504f;
+background:#f0eceb;
 font-size:13px;
 line-height:19px;
-color:#f0eceb;
+color:#5d504f;
 border-radius:3px;
 font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;
 font-weight:700;
 text-align:center;
-text-shadow:0 1px 0 rgba(18,7,6,0.6);
-border:1px solid rgba(18,7,6,0.3);
--moz-box-shadow:inset 0 -1px 1px rgba(18,7,6,0.3),inset 0 1px 1px rgba(255,253,253,0.2);
--webkit-box-shadow:inset 0 -1px 1px rgba(18,7,6,0.3),inset 0 1px 1px rgba(255,253,253,0.2);
-box-shadow:inset 0 -1px 1px rgba(18,7,6,0.3),inset 0 1px 1px rgba(255,253,253,0.2);
+border:1px solid rgba(18,7,6,0.2);
+box-shadow:inset 0 -1px 1px rgba(18,7,6,0.1),inset 0 1px 1px rgba(255,253,253,0.4);
 -webkit-transition:background-color .5s cubic-bezier(0.02,0,0.18,1);
 -moz-transition:background-color .5s cubic-bezier(0.02,0,0.18,1);
--o-transition:background-color .5s cubic-bezier(0.02,0,0.18,1);
 padding:8px 10px;
 }
 
 button:hover,.button:hover,input[type=submit]:hover {
-background:#3d302f;
+background:#998482;
 color:#fffefe;
+box-shadow:inset 0 -1px 1px rgba(18,7,6,0.1),inset 0 1px 1px rgba(255,253,253,0.2);
 }
 
 .widget-last {
@@ -1941,35 +1926,20 @@ margin-right:0!important;
 }
 
 #sidebar {
--webkit-transition-property:opacity;
--webkit-transition-duration:.5s;
--webkit-transition-timing-function:cubic-bezier(0.02,0,0.18,1);
--moz-transition-property:opacity;
--moz-transition-duration:.5s;
--moz-transition-timing-function:cubic-bezier(0.02,0,0.18,1);
--o-transition-property:opacity;
--o-transition-duration:.5s;
--o-transition-timing-function:cubic-bezier(0.02,0,0.18,1);
+-webkit-transition-property:opacity .5s cubic-bezier(0.02,0,0.18,1);
+-moz-transition-property:opacity .5s cubic-bezier(0.02,0,0.18,1);
 }
 
 #comment_form_comment
 textarea {
 -webkit-transition:height .5s cubic-bezier(0.02,0,0.18,1);
 -moz-transition:height .5s cubic-bezier(0.02,0,0.18,1);
--o-transition:height .5s cubic-bezier(0.02,0,0.18,1);
 }
 
 .slideshow
 .srd_slide {
--webkit-transition-property:opacity;
--webkit-transition-duration:.5s;
--webkit-transition-timing-function:cubic-bezier(0.02,0,0.18,1);
--moz-transition-property:opacity;
--moz-transition-duration:.5s;
--moz-transition-timing-function:cubic-bezier(0.02,0,0.18,1);
--o-transition-property:opacity;
--o-transition-duration:.5s;
--o-transition-timing-function:cubic-bezier(0.02,0,0.18,1);
+-webkit-transition-property:opacity .5s cubic-bezier(0.02,0,0.18,1);
+-moz-transition-property:opacity .5s cubic-bezier(0.02,0,0.18,1);
 opacity:0;
 }
 
@@ -2078,8 +2048,6 @@ padding:0;
 #page_header nav .menu ul li.rss,#page_header nav .menu ul
 li.twitter {
 background:#ea0000;
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 position:fixed;
 margin-left:170px;
@@ -2143,15 +2111,11 @@ line-height:14px;
 
 #hero_slideshow
 .slideshow {
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 line-height:0;
 }
 
 #work_promo {
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 background:#f0eceb;
 border-radius:5px;
@@ -2290,7 +2254,7 @@ padding-left:15px;
 
 #content.page #projects_navigation
 dd.active {
-background:url(data:image/gif;base64,R0lGODlhCgAeAJEAAP76+mJVVF1QT8zMzCH5BAHoAwMALAAAAAAKAB4AAAIelI+py+0PYxu02ouz3rz7v0kiApRAkJhnaqJkO44FADs=) 0 -18px no-repeat;
+background-position:0 -18px;
 font-weight:700;
 }
 
@@ -2311,8 +2275,6 @@ li {
 float:left;
 width:215px;
 background:transparent;
--moz-box-shadow:0 0 8px rgba(18,7,6,0.3);
--webkit-box-shadow:0 0 8px rgba(18,7,6,0.3);
 box-shadow:0 0 8px rgba(18,7,6,0.3);
 -webkit-transition:opacity .3s cubic-bezier(0.02,0,0.18,1);
 -moz-transition:opacity .3s cubic-bezier(0.02,0,0.18,1);
@@ -2714,7 +2676,6 @@ nav li.rss,nav
 li.twitter,#sticky_footer {
 -webkit-transition:background-color .5s cubic-bezier(0.02,0,0.18,1);
 -moz-transition:background-color .5s cubic-bezier(0.02,0,0.18,1);
--o-transition:background-color .5s cubic-bezier(0.02,0,0.18,1);
 }
 
 #sticky_footer
@@ -2722,7 +2683,6 @@ li.twitter,#sticky_footer {
 a {
 -webkit-transition:all .75s cubic-bezier(0.02,0,0.18,1);
 -moz-transition:all .75s cubic-bezier(0.02,0,0.18,1);
--o-transition:all .75s cubic-bezier(0.02,0,0.18,1);
 }
 
 .clearfix,.container,#wpadminbar .selected .shortlink-input,#wpadminbar .quicklinks li:hover>ul,#wpadminbar .quicklinks li.hover>ul {
