--- a/stylesheets/css/ie_custom.css
+++ b/stylesheets/css/ie_custom.css
@@ -6,12 +6,14 @@
 .font-size-small{font-size:13px;line-height:19px;}
 .font-size-x-small{font-size:11px;line-height:14px;}
 .font-size-xx-small{font-size:10px;line-height:12px;}
-.default-shadow{-moz-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);-webkit-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
+.default-shadow{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-#post_footer .item-0{clear:left;width:190px;}
-#post_footer .item-2{margin-right:0 !important;}
+#menu-primary li.rss,#menu-primary li.twitter{display:none !important;}
 #follow_list{background:#ea0000;}
 #work_pullout{background:#5d504f;}
 #categories_pullout{background:#5d504f;}
+#text-10{box-shadow:0px 4px 8px rgba(18, 7, 6, 0.3);margin-top:-30px;}#text-10 #footer_main_promo{width:470px;height:180px;display:block;background-color:#ea0000;text-decoration:none;position:relative;}#text-10 #footer_main_promo .sprite.fork{float:left;margin-left:15px;}
+#text-10 #footer_main_promo .content{overflow-y:hidden;display:block;float:left;height:180px;width:250px;margin-left:23px;padding-top:30px;padding-right:10px;}#text-10 #footer_main_promo .content .header{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;display:block;font-size:20px;line-height:30px;}
+#text-10 #footer_main_promo .content .caption{display:block;font-size:11px;line-height:14px;margin-top:15px;font-style:italic;}
