--- a/stylesheets/css/sidebar.css
+++ b/stylesheets/css/sidebar.css
@@ -6,7 +6,7 @@
 .font-size-small{font-size:13px;line-height:19px;}
 .font-size-x-small{font-size:11px;line-height:14px;}
 .font-size-xx-small{font-size:10px;line-height:12px;}
-.default-shadow{-moz-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);-webkit-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
+.default-shadow{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
