--- a/stylesheets/less/ie.less
+++ b/stylesheets/less/ie.less
@@ -1,5 +1,13 @@
 @import "variables";
 
+#top_bar {
+	background:@color_off_black;
+}
+
+#content.single {
+	padding-bottom:@row-height*3;
+}
+
 #content.home {
 	#content_secondary, #content_tertiary {
 		.post.post-4 {
@@ -8,44 +16,13 @@
 	}
 } 
 
-
-#page_footer {
-	.item-0, .item-4, .item-8 {
-		clear:left;
-		width:330px;
-	}
-	.item-3, .item-7, .item-11 {
-		margin-right:0;
-	}
-}
-
-#page_heel {
-	.item-0, .item-4, .item-8 {
-		clear:left;
-		width:330px;
-	}
-	.item-3, .item-7, .item-11 {
-		margin-right:0;
-	}
-}
-
-#sub_header {
-	.item-0, .item-4, .item-8 {
-		width:330px;
-		clear:left;
-	}
-	.item-3, .item-7, .item-11 {
-		margin-right:0;
-	}
+#page_footer, #page_heel, #sub_header, #post_footer  {
 	
-}
-
-#post_footer  {
-	.item-0, .item-4, .item-8 {
+	.widget-1, .widget-4, .widget-7 {
 		clear:left;
-		width:330px;
+		width:470px;
 	}
-	.item-3, .item-7, .item-11 {
+	.widget-3, .widget-6, .widget-9 {
 		margin-right:0;
 	}
 }
