--- a/stylesheets/less/ie_custom.less
+++ b/stylesheets/less/ie_custom.less
@@ -1,13 +1,11 @@
 @import "variables";
 
 #post_footer  {
-	.item-0 {
-		clear:left;
-		width:190px;
-	}
-	.item-2 {
-		margin-right:0 !important;
-	}
+	
+}
+
+#menu-primary li.rss, #menu-primary li.twitter {
+	display:none !important;
 }
 
 #follow_list {
@@ -22,4 +20,42 @@
 	background:@color_midtone;
 }
 
-
+/*footer promo area*/
+#text-10 {
+	.drop-shadow(0px, 4px, 8px, rgba(18, 7, 6,0.3));
+	margin-top:(@row-height*-2);
+	#footer_main_promo {
+		.columns(6);
+		height:180px;
+		display:block;
+		background-color:@color_accent;
+		text-decoration:none;
+		position:relative;
+		.sprite.fork {
+			float:left;
+			margin-left:15px;
+		}
+		.content {
+			overflow-y:hidden;
+			display:block;
+			float:left;
+			height:180px;
+			width:250px;
+			margin-left:23px;
+			padding-top:@row-height*2;
+			padding-right:10px;
+			
+			.header {
+				font-family:@sans-serif;
+				display:block;
+				.font-size-large;
+			}
+			.caption {
+				display:block;
+				.font-size-x-small;
+				margin-top:@row-height;
+				font-style:italic;
+			}
+		}
+	}
+}
