--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -1,63 +1,40 @@
 #sidebar {
-	-webkit-transition-property: opacity;
-	-webkit-transition-duration: .5s;
-	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
-
-	-moz-transition-property: opacity;
-	-moz-transition-duration: .5s;
-	-moz-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+	-webkit-transition-property: opacity.5s cubic-bezier(0.02, 0, 0.18, 1.0);
+	-moz-transition-property: opacity .5s cubic-bezier(0.02, 0, 0.18, 1.0);
 	
-	-o-transition-property: opacity;
-	-o-transition-duration: .5s;
-	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 nav li.rss, nav li.twitter {
 	-webkit-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 #sticky_footer {
 	-webkit-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	
 	.widget {
 		-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
 		-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
-		-o-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0);
 	}
 }
 
 #comment_form_comment textarea {
 	-webkit-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 .slideshow .srd_slide {
-	-webkit-transition-property: opacity;
-	-webkit-transition-duration: .5s;
-	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
-
-	-moz-transition-property: opacity;
-	-moz-transition-duration: .5s;
-	-moz-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
-	
-	-o-transition-property: opacity;
-	-o-transition-duration: .5s;
-	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+	-webkit-transition-property: opacity .5s cubic-bezier(0.02, 0, 0.18, 1.0);
+	-moz-transition-property: opacity .5s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 button, .button, input[type=submit] {
 	-webkit-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 #content.single .previous .arrow, #content.single .previous a {
 		-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
 		-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
-		-o-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
