--- a/stylesheets/less/forms.less
+++ b/stylesheets/less/forms.less
@@ -9,8 +9,17 @@
 	input[type=text], textarea {
 		.font-size-small;
 		border: 1px solid @color_midtone;
-		font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+		font-family: @sans-serif;
 		color: @color_midtone;
+		padding:3px 4px;
+		.font-size-small;
+		box-shadow: inset 0px 0px 5px rgba(18, 7, 6,0.2);
+		border-radius:2px;
+	}
+	
+	input[type=text]:focus, textarea:focus {
+		border: 1px solid @color_off_black;
+		box-shadow: inset 0px 0px 5px rgba(18, 7, 6,0.1);
 	}
 
 	
