--- a/stylesheets/less/ie.less
+++ b/stylesheets/less/ie.less
@@ -43,6 +43,30 @@
 	background:@color_light;
 }
 
+#comments_container #commentform {
+	label {
+		display:block;
+	}
+	#comment_form_info {
+		label {
+			text-align:right;
+		}
+		input[type=text] {
+			margin-bottom:@row-height;
+		}
+	}
+	textarea {
+		height:137px;
+	}
+}
+
+#comment_form_comment {
+	dl {
+		text-align:left;
+	}
+	
+}
+
 
 .clear:after {
 	content: ".";
