--- a/stylesheets/less/comments.less
+++ b/stylesheets/less/comments.less
@@ -108,48 +108,30 @@
 			color: @color_midtone;
 		}
 		#commentform {
-			#comment_form_info {
-				text-align:right;
+			label {
+				display:none;
 			}
 			#comment_form_info {
-				dl {
+				
+				
+				input[type=text] {
 					margin-bottom:@row-height;
+					.columns(2, -8);
+					text-align:right;
 				}
+
 			}
-			dl { 
-				position:relative !important;
-				.reset-dimensions;
-				dt {
-					margin-top: (@row-height);
-					padding: 0;
-					margin-bottom:5px;
-				}
-				dt:first-child {
-					margin-top: 0;
-				}
-				dd {
-					.reset-dimensions;
-					input.textinput {
-						margin: 0;
-						.font-size-x-small;
-						height: (@row-height);
-						.columns(2);
-					}
-				}
-			}
+			
 			textarea {
-				border: 1px solid #000;
 				margin: 0;
-				.font-size-small;
-				height: 127px;
-				padding: 2px 4px;
+				height: 105px;
 				width: 100%;
 				.loggedin {
 					width: 740px;
 				}
 			}
-			input[type=text] {
-				text-align:right;
+			textarea:focus {
+				height:@row-height*25;
 			}
 		}
 		#comment_form {
@@ -164,18 +146,6 @@
 				.loggedin {
 					font-style:italic;
 				}
-			}
-		}
-		
-		#comment_form_comment {
-			dl {
-				text-align:left;
-			}
-			textarea {
-				height:@row-height*8-12; /*12 is for y-padding on textarea*/
-			}
-			textarea:focus {
-				height:@row-height*20;
 			}
 		}
 	
